css common style added

--- a/index.html
+++ b/index.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PH MART</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <!-- header section -->
+    <header>
+        <nav>
+            <section class="logo">
+                <h1>PH MART</h1>
+            </section>
+            <section class="menu">
+                <a href="#products"><li>Products</li></a>
+                <a href="#services"><li>Services</li></a>
+            </section>
+        </nav>
+    </header>
+
+    <!-- main section -->
+    <main></main>
+    <!-- footer section -->
+    <footer></footer>
+
 
 </body>
 </html>
