here section added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,21 @@
         </nav>
     </header>
 
+    <!-- Here section -->
+    <section class="hero-section">
+        <div class="hero-content">
+            <h1>Best Products Within Budget</h1>
+            <p>
+                Efficiently incentivize diverse methods of empowerment and goal-oriented networks. Globally promote multifunctional models after emerging interfaces.
+            </p>
+            <button>Shop New</button>
+
+        </div>
+        <div class="here-image">
+            <img src="./images/hero-img.jpeg" alt="hero image">
+        </div>
+    </section>
+
     <!-- main section -->
     <main></main>
     <!-- footer section -->
